--- a/css/agency.css
+++ b/css/agency.css
@@ -1,7 +1,7 @@
 /*!
- * Start Bootstrap - Agency v3.3.7+1 (http://startbootstrap.com/template-overviews/agency)
- * Copyright 2013-2017 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
+ * Start Bootstrap - mypapercat v3.3.7+1 ()
+ * Copyright 2013-2017 
+ * Licensed under MIT (https://mypapercat.herokuapp.com/)
  */
 body {
   font-family: 'Lato', sans-serif;
